--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^10.0.0",
     "ibm-watson": "^6.2.1",
     "node-record-lpcm16": "^1.0.1",
+    "open": "^8.2.1",
     "watson-speech": "^0.39.0",
     "ws": "^8.2.2"
   },
