--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "src/main.js",
   "license": "MIT",
   "dependencies": {
+    "@types/electron-store": "^3.2.0",
     "axios": "^0.21.4",
     "dotenv": "^10.0.0",
     "ibm-watson": "^6.2.1",
